fix faq spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -261,12 +261,16 @@ h3 {
   display: flex;
   flex-direction: row;
   margin-top: 20px;
-  div {
+  .column {
     flex: 1;
-    margin-top: 32px;
     &:first-child {
-      margin-top: 0;
       margin-right: 64px;
+    }
+    div {
+      margin-top: 32px;
+      &:first-child {
+        margin-top: 0;
+      }
     }
   }
   h3 {
